--- a/configure.in
+++ b/configure.in
@@ -29,6 +29,20 @@ AC_STDC_HEADERS
 AC_ARG_PROGRAM
 AM_PROG_LIBTOOL
 
+AC_PATH_PROG(RM, rm, /bin/rm)
+AC_PATH_PROG(MV, mv, /bin/mv)
+AC_PATH_PROG(TAR, tar, /bin/tar)
+
+dnl Make sure we have an ANSI compiler
+AM_C_PROTOTYPES
+test "x$U" != "x" && AC_MSG_ERROR(Compiler not ANSI compliant)
+
+AC_HEADER_STDC
+dnl Checks for header files.
+AC_HEADER_DIRENT
+AC_HEADER_STDC
+AC_CHECK_HEADERS(stdio.h stdlib.h string.h ctype.h errno.h ansidecl.h)
+
 XMLSEC_DEFINES=""
 
 dnl ==========================================================================
@@ -217,6 +231,21 @@ else
     AC_MSG_RESULT(yes)
 fi    
 AC_SUBST(XMLSEC_NO_SHA1)
+
+dnl ==========================================================================
+dnl See do we need RIPEMD-160 suport
+dnl ==========================================================================
+AC_MSG_CHECKING(for RIPEMD-160 support) 
+AC_ARG_ENABLE(ripemd160,   [  --enable-ripemd160      enable RIPEMD-160 support (yes)])
+if test "$enable_ripemd160" = "no" ; then
+    XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_RIPEMD160=1"
+    XMLSEC_NO_RIPEMD160="1"
+    AC_MSG_RESULT(no)
+else
+    XMLSEC_NO_RIPEMD160="0"
+    AC_MSG_RESULT(yes)
+fi    
+AC_SUBST(XMLSEC_NO_RIPEMD160)
 
 dnl ==========================================================================
 dnl See do we need HMAC suport
