man pages for xmlsec and xmlsec-config were added * apps/xmlsec.c:
* Makefile.am config.h.in configure.in man/* xmlsec.spec.in:                    man pages for xmlsec and xmlsec-config were added                               * apps/xmlsec.c: "--version" and "--help" options added

--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@ AC_INIT(src/xmlsec.c)
 PACKAGE=xmlsec
 XMLSEC_VERSION_MAJOR=0
 XMLSEC_VERSION_MINOR=0
-XMLSEC_VERSION_SUBMINOR=7
+XMLSEC_VERSION_SUBMINOR=8
 XMLSEC_VERSION=$XMLSEC_VERSION_MAJOR.$XMLSEC_VERSION_MINOR.$XMLSEC_VERSION_SUBMINOR
 VERSION=$XMLSEC_VERSION
 XMLSEC_VERSION_INFO=`echo $XMLSEC_VERSION | awk -F. '{ printf "%d:%d:%d", $1+$2, $3, $2 }'`
@@ -25,8 +25,8 @@ dnl
 AC_ISC_POSIX
 AC_PROG_CC
 AC_PROG_INSTALL
-AC_STDC_HEADERS
 AC_ARG_PROGRAM
+AC_STDC_HEADERS
 AM_PROG_LIBTOOL
 
 AC_PATH_PROG(RM, rm, /bin/rm)
@@ -204,6 +204,7 @@ else
 	OPENSSL_VERSION="0.9.7"
 	XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_OPENSSL097=1"
     ],[
+	XMLSEC_SOMETHING="1"
     ])    
     CPPFLAGS=$OLD_CPPFLAGS
     AC_MSG_RESULT(yes ('$OPENSSL_VERSION' ))
@@ -473,5 +474,6 @@ include/xmlsec/version.h
 src/Makefile
 apps/Makefile
 tests/Makefile
+man/Makefile
 ])
 
