Makefile.am docs/* docs/api/*: added faq and documentation                    pages

--- a/docs/api/Makefile.am
+++ b/docs/api/Makefile.am
@@ -1,4 +1,3 @@
-
 TOP=../..
 MODULE=xmlsec
 SOURCE_DIR=$(TOP)/src
@@ -10,13 +9,12 @@ SGML_CATALOG_FILES=/usr/share/sgml/docbook/sgml-dtd-3.0-1.0-8/catalog:/usr/share
 # because gtkdoc does not understand some C features
 #
 DOC_SOURCE_DIR=./code
-DOC_SOURCES=\
-	$(shell find $(SOURCE_DIR) -name '*.c' -print )  \
+DOC_SOURCE_FILES=$(shell find $(SOURCE_DIR) -name '*.c' -print )  \
 	$(shell find $(INCLUDE_DIR) -name '*.h' -print )
 
 all: sgml html
 
-html: sgml
+html: sgml xmlsec.sgml
 	@(export SGML_CATALOG_FILES=$(SGML_CATALOG_FILES); \
 	gtkdoc-mkhtml $(MODULE) xmlsec.sgml)
 	
@@ -29,8 +27,8 @@ templates: scan
 scan: doc_sources
 	@gtkdoc-scan --module=$(MODULE)  --source-dir=$(DOC_SOURCE_DIR)
 		
-doc_sources: $(DOC_SOURCES)
-	@(for i in $(DOC_SOURCES) ; do \
+doc_sources: $(DOC_SOURCE_FILES)
+	@(for i in $(DOC_SOURCE_FILES) ; do \
 	    folder_name=`echo $$i | sed 's#$(TOP)/##' | sed 's#/[^/]*$$##'`; \
 	    file_name=`echo $$i | sed 's#.*/##'`; \
 	    test -d $(DOC_SOURCE_DIR)/$$folder_name || mkdir -p $(DOC_SOURCE_DIR)/$$folder_name; \
