configure.in src/Makefile.am tests/Makefile.am: fixed minor dist bugs

--- a/configure.in
+++ b/configure.in
@@ -461,7 +461,7 @@ dnl ==========================================================================
 dnl Which files to process
 dnl ==========================================================================
 rm -f rm COPYING.LIB COPYING
-ln -s Copyright COPYING
+ln -s $srcdir/Copyright COPYING
 
 AC_OUTPUT([
 Makefile
