Add pkgconfig script more fixes for dist
* Makefile.am configure.in xmlsec.spec.in xmlsec.pc xmlsec.pc.in:
Add pkgconfig script
* tests/Makefile.am tests/testDSig.sh tests/testEnc.sh tests/testKeys.sh:
more fixes for dist

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,8 +16,12 @@ EXTRA_DIST = \
 	xmlsec.spec.in \
 	xmlsec-config.in \
 	xmlsecConf.sh \
+	xmlsec.pc \
+	xmlsec.pc.in \
 	$(NULL)
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = xmlsec.pc
 
 api-doc:
 	@cd docs/api;make
