--- a/xmlsec.spec.in
+++ b/xmlsec.spec.in
@@ -82,6 +82,7 @@ rm -rf $RPM_BUILD_ROOT
 
 %doc AUTHORS ChangeLog NEWS README Copyright
 %doc %{_mandir}/man1/xmlsec.1*  
+
 %{prefix}/lib/lib*.so.*
 %{prefix}/lib/lib*.so
 %{prefix}/bin/xmlsec
@@ -92,8 +93,9 @@ rm -rf $RPM_BUILD_ROOT
 %doc AUTHORS ChangeLog NEWS README Copyright
 %doc %{_mandir}/man1/xmlsec-config.1*  
 %doc docs/* 
-%{prefix}/lib/*a
 %{prefix}/bin/xmlsec-config
 %{prefix}/include/*
+%{prefix}/lib/*a
+%{prefix}/lib/pkgconfig/xmlsec.pc
 
 %changelog
