updated XPath2 transform implementation according to the latest spec and
        * include/xmlsec/xmlsec.h src/keyinfo.c src/xmlsec.c src/xpath.c
        tests/Makefile.am tests/testDSig.sh tests/merlin-xpath-filter2-three:
        updated XPath2 transform implementation according to the
        latest spec and added Merlin's tests for it

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -13,7 +13,7 @@ EXTRA_DIST = \
 	merlin-exc-c14n-one \
 	merlin-xmldsig-twenty-three \
 	merlin-xmlenc-five \
-	01-geuerp-xfilter2 \
+	merlin-xpath-filter2-three \
 	$(NULL)
 
 check: $(XMLSEC_APP)
