added "enable-profiling" config option starting XPath and enveloped
* Makefile.am configure.in: added "enable-profiling" config option
* docs/download.html docs/index.html src/c14n.c: starting XPath and
enveloped transforms performance improvements
* tests/Makefile.am tests/merlin-c14n-three/* tests/testDSig.sh: added one
more Merlin's test suite for exc-c14n

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -14,6 +14,8 @@ EXTRA_DIST = \
 	merlin-xmldsig-twenty-three \
 	merlin-xmlenc-five \
 	merlin-xpath-filter2-three \
+	merlin-exc-c14n-one \
+	merlin-c14n-three  \
 	$(NULL)
 
 check: $(XMLSEC_APP)
