--- a/configure.in
+++ b/configure.in
@@ -440,6 +440,18 @@ else
     AC_MSG_RESULT(no)
 fi    
 
+dnl ==========================================================================
+dnl Profiling 
+dnl ==========================================================================
+AC_MSG_CHECKING(for profiling) 
+AC_ARG_ENABLE(profiling,   [  --enable-profiling       enable profiling compilation flags (no)])
+if test "$enable_profiling" = "yes" ; then
+    CFLAGS="$CFLAGS -pg"
+    AC_MSG_RESULT(yes)
+else
+    AC_MSG_RESULT(no)
+fi    
+
 
 dnl ==========================================================================
 dnl Final steps: xmlsec config
