Removed alt xpath trasnform implementation as outdated create xmlsec
* Makefile.am configure.in  src/xpathalt.c:
 Removed alt xpath trasnform implementation as outdated
* include/xmlsec/nodeset.h  src/nodeset.c
 src/Makefile.am include/xmlsec/Makefile.am
 include/xmlsec/transforms.h include/xmlsec/transformsInternal.h
 src/transforms.c include/xmlsec/xmltree.h src/xmltree.c
 src/c14n.c src/enveloped.c src/xmldsig.c
 src/xpath.c: create xmlsec specific nodes set object
 and start using it everythere
* src/x509.c: updated the code to use new openssl 0.9.7 builds

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,6 +23,7 @@ x509.c \
 keysmngr.c \
 buffered.c \
 membuf.c \
+nodeset.c \
 base64.c \
 io.c \
 digests.c \
@@ -40,7 +41,6 @@ xmldsig.c \
 des.c \
 aes.c \
 xmlenc.c \
-xpathalt.c \
 $(NULL)
 
 
