and more documentation...
* docs/api/* include/xmlsec/transforms.h
  include/xmlsec/transformsInternal.h include/xmlsec/version.h
  include/xmlsec/version.h.in src/errors.c src/xpath.c:
  and more documentation...

--- a/docs/api/Makefile.am
+++ b/docs/api/Makefile.am
@@ -32,9 +32,11 @@ doc_sources: $(DOC_SOURCE_FILES)
 	    file_name=`echo $$i | sed 's#.*/##'`; \
 	    test -d $(DOC_SOURCE_DIR)/$$folder_name || mkdir -p $(DOC_SOURCE_DIR)/$$folder_name; \
 	    cat $$i | \
-		sed 's/XMLSEC_EXPORT_VAR//' | \
+		sed 's/XMLSEC_EXPORT_VAR/extern/' | \
+		sed 's/extern const/extern/' | \
 		sed 's/XMLSEC_EXPORT//' | \
-		sed 's/XMLSEC_ERRORS_PRINTF_ATTRIBUTE//' > \
+		sed 's/XMLSEC_ERRORS_PRINTF_ATTRIBUTE//' | \
+		sed 's/^ *//' > \
 		$(DOC_SOURCE_DIR)/$$folder_name/$$file_name; \
 	done)
 
