--- a/include/xmlsec/version.h.in
+++ b/include/xmlsec/version.h.in
@@ -14,11 +14,38 @@
 extern "C" {
 #endif /* __cplusplus */ 
 
+/**
+ * XMLSEC_VERSION:
+ *
+ * The library version string in the format
+ * "<major-number>.<minor-number>.<sub-minor-number>".
+ */
 #define XMLSEC_VERSION			"@XMLSEC_VERSION@"
+/**
+ * XMLSEC_VERSION_MAJOR:
+ *
+ * The library major version number.
+ */
 #define XMLSEC_VERSION_MAJOR		@XMLSEC_VERSION_MAJOR@
+/**
+ * XMLSEC_VERSION_MINOR:
+ *
+ * The library minor version number.
+ */
 #define XMLSEC_VERSION_MINOR		@XMLSEC_VERSION_MINOR@
+/**
+ * XMLSEC_VERSION_SUBMINOR:
+ *
+ * The library sub-minor version number.
+ */
 #define XMLSEC_VERSION_SUBMINOR		@XMLSEC_VERSION_SUBMINOR@
 
+/**
+ * XMLSEC_VERSION_INFO:
+ *
+ * The library version info string in the format
+ * "<major-number>+<minor-number>:<sub-minor-number>:<minor-number>".
+ */
 #define XMLSEC_VERSION_INFO		"@XMLSEC_VERSION_INFO@"
 
 
