--- a/docs/api/Makefile.am
+++ b/docs/api/Makefile.am
@@ -33,10 +33,8 @@ doc_sources: $(DOC_SOURCE_FILES)
 	    test -d $(DOC_SOURCE_DIR)/$$folder_name || mkdir -p $(DOC_SOURCE_DIR)/$$folder_name; \
 	    cat $$i | \
 		sed 's/XMLSEC_EXPORT_VAR/extern/' | \
-		sed 's/extern const/extern/' | \
 		sed 's/XMLSEC_EXPORT//' | \
-		sed 's/XMLSEC_ERRORS_PRINTF_ATTRIBUTE//' | \
-		sed 's/^ *//' > \
+		sed 's/XMLSEC_ERRORS_PRINTF_ATTRIBUTE//' > \
 		$(DOC_SOURCE_DIR)/$$folder_name/$$file_name; \
 	done)
 
