removed xpath "here()" function declaration from global view and xpath.h
* docs/api/* include/xmlsec/Makefile.am  include/xmlsec/xpath.h
  src/xpath.c: removed xpath "here()" function declaration
  from global view and xpath.h file, rebuilt docs.

--- a/include/xmlsec/Makefile.am
+++ b/include/xmlsec/Makefile.am
@@ -24,8 +24,7 @@ x509.h \
 xmldsig.h \
 xmlenc.h \
 xmlsec.h \
-xmltree.h \
-xpath.h 
+xmltree.h
 
 install-exec-hook:
 	$(mkinstalldirs) $(DESTDIR)$(xmlsecincdir)
