modified dsig examples from Devin Heitmueller

--- a/docs/examples/dsig5/Makefile
+++ b/docs/examples/dsig5/Makefile
@@ -1,7 +1,7 @@
 #
 #
 #
-PROGRAM		 = dsig2
+PROGRAM		 = xmldsigverify
 
 cc	 	 = gcc
 CC	 	 = gcc
@@ -9,7 +9,7 @@ LD	 	 = gcc
 
 CFLAGS		+= -g -Wall $(shell xmlsec-config --cflags)
 LDFLAGS		+= -g
-LIBS 		+= $(shell xmlsec-config --libs) 
+LIBS 		+= -static $(shell xmlsec-config --libs) 
 
 $(PROGRAM):  $(PROGRAM).c 
 	$(cc) $(LDFLAGS) $(CFLAGS) -o $(PROGRAM) $(PROGRAM).c $(LIBRARY) $(LIBS) 
