--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -42,7 +42,6 @@ AUTOCONF = .\configure.txt
 #INCLUDE = $(INCLUDE);$(INCPREFIX)
 #LIB = $(LIB);$(LIBPREFIX) 
 
-
 # There should never be a need to modify anything below this line.
 # ----------------------------------------------------------------
 
@@ -57,6 +56,7 @@ XMLSEC_A = $(XMLSEC_BASENAME)_a.lib
 
 # Places where intermediate files produced by the compiler go
 XMLSEC_INTDIR = $(XMLSEC_BASENAME).int
+XMLSEC_INTDIR_A = $(XMLSEC_BASENAME)_a.int
 APPS_INTDIR = apps.int
 
 # The preprocessor and its options.
@@ -67,17 +67,20 @@ CPPFLAGS = /nologo
 CC = cl.exe
 CFLAGS = /nologo /D "WIN32" /D "_WINDOWS" /D "_MBCS" /W1 /MD 
 CFLAGS = $(CFLAGS) /I$(BASEDIR) /I$(BASEDIR)\include /I$(XMLSEC_SRCDIR)
-CFLAGS = $(CFLAGS) 
+CFLAGS = $(CFLAGS) /I$(INCPREFIX)
 
 
 # The linker and its options.
 LD = link.exe
 LDFLAGS = /nologo 
-LDFLAGS = $(LDFLAGS) /LIBPATH:$(BINDIR)
+LDFLAGS = $(LDFLAGS) /LIBPATH:$(BINDIR) /LIBPATH:$(LIBPREFIX)
 LIBS =
 !if "$(STATIC)" == "1"
-CFLAGS = $(CFLAGS) /DLIBXML_STATIC
+CFLAGS = $(CFLAGS) /D "LIBXML_STATIC"
 LIBS = libeay32.lib libxml2_a.lib wsock32.lib user32.lib gdi32.lib
+!if "$(WITH_ICONV)" == "1"
+LIBS = $(LIBS) iconv_a.lib
+!endif
 !else
 LIBS = libeay32.lib libxml2.lib user32.lib gdi32.lib
 !endif
@@ -103,6 +106,7 @@ CFLAGS = $(CFLAGS) /DXMLSEC_NO_AES=1 /DXMLSEC_OPENSSL096=1
 
 !if "$(WITH_LIBXSLT)" == "1"
 !if "$(STATIC)" == "1"
+CFLAGS = $(CFLAGS) /D "LIBXSLT_STATIC"
 LIBS = libxslt_a.lib $(LIBS)
 !else
 LIBS = libxslt.lib $(LIBS)
@@ -144,6 +148,38 @@ XMLSEC_OBJS = $(XMLSEC_INTDIR)\aes.obj\
 	$(XMLSEC_INTDIR)\xpath.obj \
 	$(XMLSEC_INTDIR)\xslt.obj 
 
+# static xmlsec object files.
+XMLSEC_OBJS_A = $(XMLSEC_INTDIR_A)\aes.obj\
+	$(XMLSEC_INTDIR_A)\base64.obj\
+	$(XMLSEC_INTDIR_A)\bn.obj \
+	$(XMLSEC_INTDIR_A)\buffered.obj \
+	$(XMLSEC_INTDIR_A)\c14n.obj \
+	$(XMLSEC_INTDIR_A)\ciphers.obj \
+	$(XMLSEC_INTDIR_A)\debug.obj \
+	$(XMLSEC_INTDIR_A)\des.obj \
+	$(XMLSEC_INTDIR_A)\digests.obj \
+	$(XMLSEC_INTDIR_A)\dsa.obj \
+	$(XMLSEC_INTDIR_A)\enveloped.obj \
+	$(XMLSEC_INTDIR_A)\errors.obj \
+	$(XMLSEC_INTDIR_A)\hmac.obj \
+	$(XMLSEC_INTDIR_A)\io.obj \
+	$(XMLSEC_INTDIR_A)\keyinfo.obj \
+	$(XMLSEC_INTDIR_A)\keys.obj \
+	$(XMLSEC_INTDIR_A)\keysmngr.obj \
+	$(XMLSEC_INTDIR_A)\membuf.obj \
+	$(XMLSEC_INTDIR_A)\nodeset.obj \
+	$(XMLSEC_INTDIR_A)\ripemd160.obj \
+	$(XMLSEC_INTDIR_A)\rsa.obj \
+	$(XMLSEC_INTDIR_A)\sha1.obj \
+	$(XMLSEC_INTDIR_A)\transforms.obj \
+	$(XMLSEC_INTDIR_A)\x509.obj \
+	$(XMLSEC_INTDIR_A)\xmldsig.obj \
+	$(XMLSEC_INTDIR_A)\xmlenc.obj \
+	$(XMLSEC_INTDIR_A)\xmlsec.obj \
+	$(XMLSEC_INTDIR_A)\xmltree.obj \
+	$(XMLSEC_INTDIR_A)\xpath.obj \
+	$(XMLSEC_INTDIR_A)\xslt.obj 
+
 
 
 # XmlSec and friends executables.
@@ -153,11 +189,11 @@ all : xmlsec apps
 
 xmlsec : $(BINDIR)\$(XMLSEC_SO) $(BINDIR)\$(XMLSEC_A)
 
-
 apps : $(APPS)
 
 clean :
 	if exist $(XMLSEC_INTDIR) rmdir /S /Q $(XMLSEC_INTDIR)
+	if exist $(XMLSEC_INTDIR_A) rmdir /S /Q $(XMLSEC_INTDIR_A)
 	if exist $(APPS_INTDIR) rmdir /S /Q $(APPS_INTDIR)
 	if exist $(BINDIR) rmdir /S /Q $(BINDIR)
 
@@ -190,12 +226,23 @@ $(BINDIR) :
 $(XMLSEC_INTDIR) :
 	if not exist $(XMLSEC_INTDIR) mkdir $(XMLSEC_INTDIR)
 
+# Makes the static xmlsec intermediate directory.
+$(XMLSEC_INTDIR_A) :
+	if not exist $(XMLSEC_INTDIR_A) mkdir $(XMLSEC_INTDIR_A)
+
 # An implicit rule for xmlsec compilation.
 {$(XMLSEC_SRCDIR)}.c{$(XMLSEC_INTDIR)}.obj::
 	$(CC) $(CFLAGS) /Fo$(XMLSEC_INTDIR)\ /c $<
 
+# An implicit rule for static xmlsec compilation.
+{$(XMLSEC_SRCDIR)}.c{$(XMLSEC_INTDIR_A)}.obj::
+	$(CC) $(CFLAGS) /D "XMLSEC_STATIC" /Fo$(XMLSEC_INTDIR_A)\ /c $<
+
 # Compiles xmlsec source. Uses the implicit rule for commands.
 $(XMLSEC_OBJS) : $(XMLSEC_INTDIR)
+
+# Compiles static xmlsec source. Uses the implicit rule for commands.
+$(XMLSEC_OBJS_A) : $(XMLSEC_INTDIR_A)
 
 # Creates the export definition file (DEF) for xmlsec.
 $(XMLSEC_INTDIR)\$(XMLSEC_DEF) : $(XMLSEC_INTDIR) $(XMLSEC_DEF).src
@@ -209,13 +256,8 @@ $(BINDIR)\$(XMLSEC_SO) : $(BINDIR) $(XMLSEC_OBJS) $(XMLSEC_INTDIR)\$(XMLSEC_DEF)
 		$(XMLSEC_OBJS) $(LIBS)
 
 # Creates the xmlsec archive.
-$(BINDIR)\$(XMLSEC_A) : $(BINDIR) $(XMLSEC_OBJS)
-	$(AR) $(ARFLAGS) /OUT:$(BINDIR)\$(XMLSEC_A) $(XMLSEC_OBJS)
-
-
-# Creates the xmlsec intermediate directory.
-
-# Creates the export definition file (DEF) for xmlsec.
+$(BINDIR)\$(XMLSEC_A) : $(BINDIR) $(XMLSEC_OBJS_A)
+	$(AR) $(ARFLAGS) /OUT:$(BINDIR)\$(XMLSEC_A) $(XMLSEC_OBJS_A)
 
 
 # Creates the apps intermediate directory.
@@ -225,7 +267,7 @@ $(APPS_INTDIR) :
 # An implicit rule for xmlsec and friends.
 !if "$(STATIC)" == "1"
 {$(APPS_SRCDIR)}.c{$(BINDIR)}.exe:
-	$(CC) /D "xmlsec_STATIC" $(CFLAGS) /Fo$(APPS_INTDIR)\ /c $< 
+	$(CC) /D "XMLSEC_STATIC" $(CFLAGS) /Fo$(APPS_INTDIR)\ /c $< 
 	$(LD) $(LDFLAGS) /OUT:$@ $(XMLSEC_A) $(LIBS) $(APPS_INTDIR)\$(<B).obj
 !else
 {$(APPS_SRCDIR)}.c{$(BINDIR)}.exe:
