added "--output" option to spefcify output file changed the docs to
Mon Oct  7 19:22:11 2002  Aleksey Sanin  <aleksey@aleksey.com>

        * apps/xmlsec.c: added "--output" option to spefcify output file
        * docs/xmlsec-man.html man/create.sh man/xmlsec.1  man/xmlsec.xml:
        changed the docs to reflect new "--output" option
        * tests/testDSig.sh tests/testEnc.sh: changed tests to use new
        "--output" option
        * configure.in xmlsec.pc xmlsec.spec: minor config changes

--- a/configure.in
+++ b/configure.in
@@ -74,7 +74,8 @@ else
     then
         LIBXML_LIBS="`$LIBXML_CONFIG --libs`"
         LIBXML_CFLAGS="`$LIBXML_CONFIG --cflags`"
-        AC_MSG_RESULT(yes ('`which $LIBXML_CONFIG`'))
+	LIBXML_VERSION="`$LIBXML_CONFIG --version`"
+        AC_MSG_RESULT(yes ('$LIBXML_VERSION'))
     else
         AC_MSG_ERROR(You need at least libxml2 $LIBXML_MIN_VERSION for this version of $PACKAGE)
     fi
@@ -122,7 +123,8 @@ else
 	then
     	    LIBXSLT_LIBS="`$LIBXSLT_CONFIG --libs`"
 	    LIBXSLT_CFLAGS="`$LIBXSLT_CONFIG --cflags`"
-    	    AC_MSG_RESULT(yes ('`which $LIBXSLT_CONFIG`'))
+	    LIBXSLT_VERSION="`$LIBXSLT_VERSION --version`"
+    	    AC_MSG_RESULT(yes ('$LIBXSLT_VERSION'))
 	else
     	    AC_MSG_ERROR(You need at least libxslt $LIBXSLT_MIN_VERSION for this version of $PACKAGE)
 	fi	
