--- a/configure.in
+++ b/configure.in
@@ -424,6 +424,11 @@ else
     AC_MSG_RESULT(no)
 fi    
 
+dnl ==========================================================================
+dnl Dynamic linking
+dnl ==========================================================================
+AC_ARG_ENABLE(dynamic,   [  --enable-dynamic       enable dynamic linking of the xmlsec utility (no)])
+AM_CONDITIONAL(XMLSEC_DYNAMIC_LINKING, test "$enable_dynamic" = "yes")
 
 dnl ==========================================================================
 dnl Final steps: xmlsec config
