major code refactoring - separating OpenSSL dependend code in order to
* almost all files: major code refactoring - separating OpenSSL
  dependend code in order to provide support for other
  crypto engines
* include/xmlsec/openssl src/openssl: the OpenSSL dependend
  code is moved into these new folders
* include/xmlsec/nss src/nss: templates for NSS support

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -2,11 +2,14 @@ NULL =
 
 bin_PROGRAMS = xmlsec
 
-DEPS = $(top_builddir)/src/libxmlsec.la
+DEPS = \
+$(top_builddir)/src/libxmlsec.la \
+$(top_builddir)/src/$(XMLSEC_CRYPTO)/lib$(XMLSEC_CRYPTO_LIB).la \
+$(NULL)
 
 INCLUDES =\
 -I$(top_srcdir)/include \
-$(OPENSSL_CFLAGS) \
+$(XMLSEC_CRYPTO_CFLAGS) \
 $(LIBXSLT_CFLAGS) \
 $(LIBXML_CFLAGS) \
 $(NULL) 
@@ -19,8 +22,9 @@ xmlsec_LDFLAGS = -static
 endif
 
 xmlsec_LDADD = \
+$(top_builddir)/src/$(XMLSEC_CRYPTO)/lib$(XMLSEC_CRYPTO_LIB).la \
 $(top_builddir)/src/libxmlsec.la \
-$(OPENSSL_LDADDS) \
+$(XMLSEC_CRYPTO_LDADDS) \
 $(LIBXSLT_LIBS) \
 $(LIBXML_LIBS) \
 $(NULL)
