--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,10 @@
 NULL =
 
+SUBDIRS = $(XMLSEC_CRYPTO)
+
 INCLUDES = \
 -I$(top_srcdir) \
 -I$(top_srcdir)/include \
-$(OPENSSL_CFLAGS) \
 $(LIBXSLT_CFLAGS) \
 $(LIBXML_CFLAGS) \
 -Wall -ansi \
@@ -12,41 +13,33 @@ $(NULL)
 lib_LTLIBRARIES = libxmlsec.la
 
 libxmlsec_la_SOURCES =\
-xmlsec.c \
-xmltree.c \
-bn.c \
-debug.c \
-transforms.c \
-keys.c \
-keyinfo.c \
-x509.c \
-keysmngr.c \
-buffered.c \
-membuf.c \
-nodeset.c \
 base64.c \
+buffered.c \
+c14n.c \
+ciphers.c \
+debug.c \
+digests.c \
+enveloped.c \
 errors.c \
 io.c \
-digests.c \
-ciphers.c \
-sha1.c \
-ripemd160.c \
-hmac.c \
-c14n.c \
-dsa.c \
-rsa.c \
-xpath.c \
-enveloped.c \
-xslt.c \
+keyinfo.c \
+keys.c \
+keysmngr.c \
+membuf.c \
+nodeset.c \
+transforms.c \
+x509.c \
 xmldsig.c \
-des.c \
-aes.c \
 xmlenc.c \
+xmlsec.c \
+xmltree.c \
+xpath.c \
+xslt.c \
 $(NULL)
 
 
 libxmlsec_la_LIBADD = \
-$(OPENSSL_LIBS) \
+-L./$(XMLSEC_CRYPTO) -l$(XMLSEC_CRYPTO_LIB) \
 $(LIBXSLT_LIBS) \
 $(LIBXML_LIBS) \
 $(NULL)
@@ -56,5 +49,4 @@ libxmlsec_la_LDFLAGS = -version-info @XMLSEC_VERSION_INFO@
 # what is this include dir ?
 libxmlsecincdir = $(includedir)/xmlsec
 
-libxmlsecinc_HEADERS = \
-$(NULL)
+
