fixing minor config problems with older automake

--- a/configure.in
+++ b/configure.in
@@ -16,6 +16,7 @@ XMLSEC_CRYPTO_VERSION=""
 XMLSEC_CRYPTO_LIB=""
 XMLSEC_CRYPTO_CFLAGS=""
 XMLSEC_CRYPTO_LIBS=""
+XMLSEC_CRYPTO_LDADDS=""
 
 XMLSEC_NO_SHA1=""
 XMLSEC_NO_RIPEMD160=""
@@ -199,6 +200,7 @@ if test "x$XMLSEC_CRYPTO" = "x" ; then
 	XMLSEC_CRYPTO_LIB="xmlsec-nss"
 	XMLSEC_CRYPTO_CFLAGS="$NSS_CFLAGS"
 	XMLSEC_CRYPTO_LIBS="$NSS_LIBS"
+	XMLSEC_CRYPTO_LDADDS="$NSS_LDADDS"
 	XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_CRYPTO_NSS=1"
 
 	dnl todo: nothing is implemented for NSS yet
@@ -331,6 +333,7 @@ else
 	XMLSEC_CRYPTO_LIB="xmlsec-openssl"
 	XMLSEC_CRYPTO_CFLAGS="$OPENSSL_CFLAGS"
 	XMLSEC_CRYPTO_LIBS="$OPENSSL_LIBS"
+	XMLSEC_CRYPTO_LDADDS="$OPENSSL_LDADDS"
 	XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_CRYPTO_OPENSSL=1"
 
 	AC_MSG_RESULT(yes ('$OPENSSL_VERSION' ))
@@ -600,6 +603,7 @@ AC_SUBST(XMLSEC_CRYPTO_VERSION)
 AC_SUBST(XMLSEC_CRYPTO_LIB)
 AC_SUBST(XMLSEC_CRYPTO_CFLAGS)
 AC_SUBST(XMLSEC_CRYPTO_LIBS)
+AC_SUBST(XMLSEC_CRYPTO_LDADDS)
 
 CFLAGS="$CFLAGS $XMLSEC_DEFINES"
 AC_SUBST(CFLAGS)
