fixing build errors

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -24,6 +24,7 @@ endif
 xmlsec_LDADD = \
 $(top_builddir)/src/$(XMLSEC_CRYPTO)/lib$(XMLSEC_CRYPTO_LIB).la \
 $(top_builddir)/src/libxmlsec.la \
+$(top_builddir)/src/$(XMLSEC_CRYPTO)/lib$(XMLSEC_CRYPTO_LIB).la \
 $(XMLSEC_CRYPTO_LDADDS) \
 $(LIBXSLT_LIBS) \
 $(LIBXML_LIBS) \
