--- a/configure.in
+++ b/configure.in
@@ -26,6 +26,7 @@ XMLSEC_NO_DES=""
 XMLSEC_NO_DSA=""
 XMLSEC_NO_RSA=""
 XMLSEC_NO_X509=""
+XMLSEC_NO_PGP=""
 XMLSEC_NO_XMLDSIG=""
 XMLSEC_NO_XMLENC=""
 
@@ -75,8 +76,8 @@ LIBXML_CONFIG="xml2-config"
 LIBXML_PREFIX=""
 LIBXML_CFLAG=""
 LIBXML_LIBS=""
-AC_MSG_CHECKING(for libxml2 libraries >= $LIBXML_MIN_VERSION) 
-AC_ARG_WITH(libxml, [  --with-libxml=[PFX]     libxml2 location])
+AC_MSG_CHECKING(for LibXML2 libraries >= $LIBXML_MIN_VERSION) 
+AC_ARG_WITH(libxml, [  --with-libxml=[PFX]       LibXML2 location])
 if test "$with_libxml" = "no" ; then
     AC_MSG_ERROR(libxml2 is required for $PACKAGE)
 else
@@ -117,8 +118,8 @@ LIBXSLT_CONFIG="xslt-config"
 LIBXSLT_PREFIX=""
 LIBXSLT_CFLAGS=""
 LIBXSLT_LIBS=""
-AC_MSG_CHECKING(for libxslt libraries >= $LIBXSLT_MIN_VERSION) 
-AC_ARG_WITH(libxslt, [  --with-libxslt=[PFX]    libxslt location])
+AC_MSG_CHECKING(for LibXSLT libraries >= $LIBXSLT_MIN_VERSION) 
+AC_ARG_WITH(libxslt, [  --with-libxslt=[PFX]      LibXSLT location])
 if test "$with_libxslt" = "no" ; then
     LIBXSLT_WITHOUT="yes"
     XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_XSLT=1"
@@ -172,7 +173,7 @@ NSS_LIBS=""
 NSS_LDADDS=""
 if test "x$XMLSEC_CRYPTO" = "x" ; then
     AC_MSG_CHECKING(for NSS libraries >= $NSS_MIN_VERSION) 
-    AC_ARG_WITH(nss, [  --with-nss=PFX     nss location])
+    AC_ARG_WITH(nss, [  --with-nss=PFX          NSS location])
     if test "$with_nss" = "no" -o "x$with_nss" = "x" ; then
 	AC_MSG_RESULT(no)
     else
@@ -214,6 +215,7 @@ if test "x$XMLSEC_CRYPTO" = "x" ; then
 	XMLSEC_NO_DSA="1"
 	XMLSEC_NO_RSA="1"
 	XMLSEC_NO_X509="1"
+	XMLSEC_NO_PGP="1"
 
 	AC_MSG_RESULT(yes ('$NSS_VERSION' ))
     fi
@@ -238,7 +240,7 @@ OPENSSL_CFLAGS=""
 OPENSSL_LIBS=""
 OPENSSL_LDADDS=""
 AC_MSG_CHECKING(for OpenSSL libraries >= $OPENSSL_MIN_VERSION) 
-AC_ARG_WITH(openssl, [  --with-openssl=[PFX]    openssl location])
+AC_ARG_WITH(openssl, [  --with-openssl=[PFX]      OpenSSL location])
 if test "x$XMLSEC_CRYPTO" != "x" ; then
     if test "$with_openssl" = "no" -o "x$with_openssl" = "x" ; then
 	AC_MSG_RESULT(no)
@@ -338,6 +340,7 @@ else
 	XMLSEC_CRYPTO_LIBS="$OPENSSL_LIBS"
 	XMLSEC_CRYPTO_LDADDS="$OPENSSL_LDADDS"
 	XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_CRYPTO_OPENSSL=1"
+	XMLSEC_NO_PGP="1"
 
 	AC_MSG_RESULT(yes ('$OPENSSL_VERSION' ))
     fi
@@ -446,24 +449,6 @@ else
 fi    
 AC_SUBST(XMLSEC_NO_RSA)
 
-dnl ==========================================================================
-dnl See do we need x509 suport
-dnl ==========================================================================
-AC_MSG_CHECKING(for x509 support) 
-AC_ARG_ENABLE(x509,   [  --enable-x509           enable x509 support (yes)])
-if test "$enable_x509" = "yes" -a "$XMLSEC_NO_X509" = "1" ; then
-    AC_MSG_ERROR(x509 support is disabled for $XMLSEC_CRYPTO version $XMLSEC_CRYPTO_VERSION)
-else     
-    if test "$enable_x509" = "no" -o "$XMLSEC_NO_X509" = "1" ; then
-	XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_X509=1"
-	XMLSEC_NO_X509="1"
-	AC_MSG_RESULT(no)
-    else
-	XMLSEC_NO_X509="0"
-	AC_MSG_RESULT(yes)
-    fi
-fi    
-AC_SUBST(XMLSEC_NO_X509)
 
 dnl ==========================================================================
 dnl See do we need DES suport
@@ -502,6 +487,44 @@ else
     fi
 fi    
 AC_SUBST(XMLSEC_NO_AES)
+
+dnl ==========================================================================
+dnl See do we need X509 suport
+dnl ==========================================================================
+AC_MSG_CHECKING(for X509 support) 
+AC_ARG_ENABLE(x509,   [  --enable-x509           enable X509 support (yes)])
+if test "$enable_x509" = "yes" -a "$XMLSEC_NO_X509" = "1" ; then
+    AC_MSG_ERROR(x509 support is disabled for $XMLSEC_CRYPTO version $XMLSEC_CRYPTO_VERSION)
+else     
+    if test "$enable_x509" = "no" -o "$XMLSEC_NO_X509" = "1" ; then
+	XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_X509=1"
+	XMLSEC_NO_X509="1"
+	AC_MSG_RESULT(no)
+    else
+	XMLSEC_NO_X509="0"
+	AC_MSG_RESULT(yes)
+    fi
+fi    
+AC_SUBST(XMLSEC_NO_X509)
+
+dnl ==========================================================================
+dnl See do we need PGP suport
+dnl ==========================================================================
+AC_MSG_CHECKING(for PGP support) 
+AC_ARG_ENABLE(pgp,   [  --enable-pgp            enable PGP support (yes)])
+if test "$enable_pgp" = "yes" -a "$XMLSEC_NO_PGP" = "1" ; then
+    AC_MSG_ERROR(pgp support is disabled for $XMLSEC_CRYPTO version $XMLSEC_CRYPTO_VERSION)
+else     
+    if test "$enable_pgp" = "no" -o "$XMLSEC_NO_PGP" = "1" ; then
+	XMLSEC_DEFINES="$XMLSEC_DEFINES -DXMLSEC_NO_PGP=1"
+	XMLSEC_NO_PGP="1"
+	AC_MSG_RESULT(no)
+    else
+	XMLSEC_NO_PGP="0"
+	AC_MSG_RESULT(yes)
+    fi
+fi    
+AC_SUBST(XMLSEC_NO_PGP)
 
 dnl ==========================================================================
 dnl See do we need XMLDSig suport
@@ -577,7 +600,7 @@ dnl ==========================================================================
 dnl Profiling 
 dnl ==========================================================================
 AC_MSG_CHECKING(for profiling) 
-AC_ARG_ENABLE(profiling,   [  --enable-profiling       enable profiling compilation flags (no)])
+AC_ARG_ENABLE(profiling,   [  --enable-profiling      enable profiling compilation flags (no)])
 if test "$enable_profiling" = "yes" ; then
     CFLAGS="$CFLAGS -pg"
     AC_MSG_RESULT(yes)
@@ -588,7 +611,7 @@ fi
 dnl ==========================================================================
 dnl Dynamic linking
 dnl ==========================================================================
-AC_ARG_ENABLE(dynamic,   [  --enable-dynamic       enable dynamic linking of the xmlsec utility (no)])
+AC_ARG_ENABLE(dynamic,   [  --enable-dynamic        enable dynamic linking of the xmlsec utility (no)])
 AM_CONDITIONAL(XMLSEC_DYNAMIC_LINKING, test "$enable_dynamic" = "yes")
 
 dnl ==========================================================================
