fixed bugs #102194 and #102196 -- Sun CC does not have -WAll, -ansi options and __FUNCTION__ macro

--- a/docs/examples/dsig1/Makefile
+++ b/docs/examples/dsig1/Makefile
@@ -7,7 +7,7 @@ cc	 	 = gcc
 CC	 	 = gcc
 LD	 	 = gcc
 
-CFLAGS		+= -g -Wall $(shell xmlsec-config --cflags)
+CFLAGS		+= -g $(shell xmlsec-config --cflags)
 LDFLAGS		+= -g
 LIBS 		+= -static $(shell xmlsec-config --libs) 
 
