--- a/docs/examples/dsig4/Makefile
+++ b/docs/examples/dsig4/Makefile
@@ -7,7 +7,7 @@ cc	 	 = gcc
 CC	 	 = gcc
 LD	 	 = gcc
 
-CFLAGS		+= -g -Wall $(shell xmlsec-config --cflags)
+CFLAGS		+= -g $(shell xmlsec-config --cflags)
 LDFLAGS		+= -g
 LIBS 		+= -static $(shell xmlsec-config --libs) 
 
