--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -3,28 +3,32 @@ NULL =
 bin_PROGRAMS = xmlsec
 
 DEPS = \
+$(top_builddir)/src/openssl/libxmlsec-openssl.la \
 $(top_builddir)/src/libxmlsec.la \
-$(top_builddir)/src/$(XMLSEC_CRYPTO)/lib$(XMLSEC_CRYPTO_LIB).la \
 $(NULL)
 
-INCLUDES =\
+INCLUDES = \
 -I$(top_srcdir)/include \
-$(XMLSEC_CRYPTO_CFLAGS) \
+$(OPENSSL_CFLAGS) \
 $(LIBXSLT_CFLAGS) \
 $(LIBXML_CFLAGS) \
 $(NULL) 
 
 
+xmlsec_SOURCES = \
+xmlsec.c \
+crypto.c crypto.h \
+$(NULL)
+
 if XMLSEC_DYNAMIC_LINKING
 xmlsec_LDFLAGS =
 else
-xmlsec_LDFLAGS = -static
+xmlsec_LDFLAGS = -static -L$(top_builddir)/src -lxmlsec
 endif
-
 xmlsec_LDADD = \
-$(top_builddir)/src/$(XMLSEC_CRYPTO)/lib$(XMLSEC_CRYPTO_LIB).la \
+$(top_builddir)/src/openssl/libxmlsec-openssl.la \
 $(top_builddir)/src/libxmlsec.la \
-$(XMLSEC_CRYPTO_LDADDS) \
+$(OPENSSL_LDADDS) \
 $(LIBXSLT_LIBS) \
 $(LIBXML_LIBS) \
 $(NULL)
